--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "start:dev":"nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/wilsonf-mamani/backend/issues"
   },
-  "homepage": "https://github.com/wilsonf-mamani/backend#readme"
+  "homepage": "https://github.com/wilsonf-mamani/backend#readme",
+  "dependencies": {
+    "express": "^4.17.2"
+  }
 }
