--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "start:dev":"nodemon src/index.js"
+    "start:dev": "dotenv -e .env -- nodemon src/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,11 @@
   },
   "homepage": "https://github.com/wilsonf-mamani/backend#readme",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "prisma": "^3.8.1"
+  },
+  "devDependencies": {
+    "dotenv-cli": "^4.1.1",
+    "nodemon": "^2.0.15"
   }
 }
