--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/wilsonf-mamani/backend#readme",
   "dependencies": {
+    "@prisma/client": "^3.8.1",
     "express": "^4.17.2",
     "prisma": "^3.8.1"
   },
