chore:Creacion archivos

--- a/package.json
+++ b/package.json
@@ -21,11 +21,17 @@
   "homepage": "https://github.com/wilsonf-mamani/backend#readme",
   "dependencies": {
     "@prisma/client": "^3.8.1",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.2",
-    "prisma": "^3.8.1"
+    "morgan": "^1.10.0",
+    "prisma": "^3.8.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "dotenv-cli": "^4.1.1",
     "nodemon": "^2.0.15"
+  },
+  "prisma": {
+    "seed": "node prisma/seeds.js"
   }
 }
