--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "start:dev": "dotenv -e .env -- nodemon src/index.js"
+    "start:dev": "dotenv -e .env -- nodemon src/index.js",
+    "crear_migracion": "prisma migrate dev",
+    "correr_migracion": "prisma migrate deploy",
+    "reset_db": "prisma migrate reset"
   },
   "repository": {
     "type": "git",
@@ -21,6 +24,7 @@
   "homepage": "https://github.com/wilsonf-mamani/backend#readme",
   "dependencies": {
     "@prisma/client": "^3.8.1",
+    "aws-sdk": "^2.1069.0",
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
